# orbit-android

./: .gitignore  .gitmodules  README.md  build-streamer.sh  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: ai_release_notes.py  ci.yml
app/: build.gradle  build.gradle.kts
app-extend/: build.gradle
app-extend/src/main/: AndroidManifest.xml
app-extend/src/main/res/drawable/: ic_dark_mode.xml  ic_extend_foreground.xml
app-extend/src/main/res/layout/: activity_main.xml  dialog_edit_dpi.xml  dialog_edit_resolution.xml  dialog_edit_rotation.xml  floating_back_button.xml  fragment_about.xml  fragment_display_detail.xml  fragment_home.xml  fragment_input_device_detail.xml  fragment_settings.xml  item_display.xml  item_input_device.xml
app-mirror/: build.gradle
app-mirror/src/main/: AndroidManifest.xml
app-mirror/src/main/assets/: application.yml  daemon.yml  file-transfer.html  filetransfer.yml  orbit.yml  permission_definitions.json5  permissions.html  remote.html
app-mirror/src/main/cpp/: CMakeLists.txt  audio.cpp  audio.h  config.cpp  config.h  globals.h  input.cpp  logging.cpp  nvhttp.cpp  rtsp.cpp  stream.cpp  stream.h  sunshine.cpp  sunshine.h  video.cpp  video.h  video_colorspace.cpp
app-mirror/src/main/cpp/dependencies/: Boost_Sunshine.cmake
app-mirror/src/main/cpp/platform/: common.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  index.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hidden-api-stub/: build.gradle  build.gradle.kts
script/: ai_release_notes.py  build-orbit.bat  build-orbit.sh  build-rclone.sh  build-streamer.sh  calculate_meta.py  generate_assetlinks.py  prune_rclone.py  reset-permissions.sh  wv-attach.bat
termux-x11-app/: build.gradle  build.gradle.kts
termux-x11-shell-loader/: build.gradle  build.sh  安卓屏连-x11.apk  安卓屏连-x11.sh
(+554 files in other folders)
